# medical-waste-sorter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  hardware_question.yml
.github/workflows/: ci.yml
docs/: BOM.md  CALIBRATION.md  DEPLOY.md  HAILO.md  HARDWARE.md  OPTIMIZATION.md  PANTHERA_HT.md  PUBLISH.md  RK3588.md  TROUBLESHOOTING.md
scripts/: install_pi.sh
src/: __init__.py  calibration.py  calibration_points.py  camera.py  config.py  coords.py  detector.py  main.py  serial_arm.py  tracker.py
src/arms/: __init__.py  base.py  gcode.py  panthera_ht.py
src/cameras/: __init__.py  base.py  orbbec.py  realsense.py  usb.py
tools/: aruco_demo.py  capture_calib_set.py  depth_inspect.py  export_ncnn.py  port_probe.py  quantize_ncnn.py  test_arm.py
